--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/bootstrap.min.css'>
+	<link rel='stylesheet' href='/bundle.css'>
+
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script defer src='/build/bundle.js'></script>
@@ -15,4 +17,5 @@
 
 <body>
 </body>
+
 </html>
